crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__generated_parser_optional_state_facade.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: facade
---
antlr4_runtime::__antlr4_rust_parser_facade! {
    type: AdaptiveRoutingParser<L, H>,
    fields: {
        base: base,
        simulator: simulator,
        generated_only: generated_only,
    },
    metadata: metadata,
    parser_atn: parser_atn,
    reset(parser) {
        parser.adaptive_atn.reset();
    }
}
