crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__generated_recognizers_reuse_cached_static_metadata.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: recognizer_construction
---
Lexer::with_hooks
    pub fn with_hooks(input: I, hooks: H) -> Self {
        let grammar_metadata = metadata();
        let data = grammar_metadata.recognizer_data();
        Self { base: BaseLexer::new(input, data).with_shared_dfa(atn()), hooks }
    }

Parser::with_hooks
    pub fn with_hooks(input: CommonTokenStream<L>, hooks: H) -> Self {
        let grammar_metadata = metadata();
        let data = grammar_metadata.recognizer_data();
        let base = BaseParser::with_semantic_hooks(input, data, hooks);
        Self {
            base,
            simulator: None,
            generated_only: std::env::var_os("ANTLR4_RUST_GENERATED_ONLY").is_some(),
            adaptive_atn: antlr4_runtime::generated::AdaptiveAtnRetryState::new(),
        }
    }
