crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__left_recursive_label_alternatives.snap
---
source: crates/antlr-rust-codegen/src/generator.rs
assertion_line: 18898
expression: "model.rules[1].alts"
---
[
    AltModel {
        label: None,
        span: (
            128,
            176,
        ),
        refs: [
            ElementRef {
                label: Some(
                    "left",
                ),
                target: "e",
                token_types: [],
                is_block: false,
                is_list: false,
                cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                stable_accessor: true,
                choice_branch: [],
                choice_arity: [],
                choice_spans: [],
                group_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                group_spans: [],
                branch_spans: [],
                leading_terminal: true,
                span: None,
                branch_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
            },
            ElementRef {
                label: None,
                target: "STAR",
                token_types: [
                    2,
                ],
                is_block: false,
                is_list: false,
                cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                stable_accessor: true,
                choice_branch: [],
                choice_arity: [],
                choice_spans: [],
                group_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                group_spans: [],
                branch_spans: [],
                leading_terminal: true,
                span: Some(
                    (
                        135,
                        139,
                    ),
                ),
                branch_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
            },
            ElementRef {
                label: Some(
                    "right",
                ),
                target: "e",
                token_types: [],
                is_block: false,
                is_list: false,
                cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                stable_accessor: true,
                choice_branch: [],
                choice_arity: [],
                choice_spans: [],
                group_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                group_spans: [],
                branch_spans: [],
                leading_terminal: false,
                span: Some(
                    (
                        146,
                        147,
                    ),
                ),
                branch_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
            },
        ],
        children: {
            "STAR": ChildCardinality {
                min: 1,
                max: Some(
                    1,
                ),
            },
            "e": ChildCardinality {
                min: 2,
                max: Some(
                    2,
                ),
            },
        },
        leading_target: Some(
            "e",
        ),
    },
    AltModel {
        label: None,
        span: (
            183,
            231,
        ),
        refs: [
            ElementRef {
                label: Some(
                    "left",
                ),
                target: "e",
                token_types: [],
                is_block: false,
                is_list: false,
                cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                stable_accessor: true,
                choice_branch: [],
                choice_arity: [],
                choice_spans: [],
                group_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                group_spans: [],
                branch_spans: [],
                leading_terminal: true,
                span: None,
                branch_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
            },
            ElementRef {
                label: None,
                target: "PLUS",
                token_types: [
                    3,
                ],
                is_block: false,
                is_list: false,
                cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                stable_accessor: true,
                choice_branch: [],
                choice_arity: [],
                choice_spans: [],
                group_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                group_spans: [],
                branch_spans: [],
                leading_terminal: true,
                span: Some(
                    (
                        190,
                        194,
                    ),
                ),
                branch_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
            },
            ElementRef {
                label: Some(
                    "right",
                ),
                target: "e",
                token_types: [],
                is_block: false,
                is_list: false,
                cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                stable_accessor: true,
                choice_branch: [],
                choice_arity: [],
                choice_spans: [],
                group_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                group_spans: [],
                branch_spans: [],
                leading_terminal: false,
                span: Some(
                    (
                        201,
                        202,
                    ),
                ),
                branch_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
            },
        ],
        children: {
            "PLUS": ChildCardinality {
                min: 1,
                max: Some(
                    1,
                ),
            },
            "e": ChildCardinality {
                min: 2,
                max: Some(
                    2,
                ),
            },
        },
        leading_target: Some(
            "e",
        ),
    },
    AltModel {
        label: None,
        span: (
            238,
            260,
        ),
        refs: [
            ElementRef {
                label: None,
                target: "INT",
                token_types: [
                    1,
                ],
                is_block: false,
                is_list: false,
                cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                stable_accessor: true,
                choice_branch: [],
                choice_arity: [],
                choice_spans: [],
                group_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
                group_spans: [],
                branch_spans: [],
                leading_terminal: true,
                span: Some(
                    (
                        238,
                        241,
                    ),
                ),
                branch_local_cardinality: ChildCardinality {
                    min: 1,
                    max: Some(
                        1,
                    ),
                },
            },
        ],
        children: {
            "INT": ChildCardinality {
                min: 1,
                max: Some(
                    1,
                ),
            },
        },
        leading_target: None,
    },
]
