crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__lexer_lex_convenience.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: "render_lexer_lex_convenience(\"TLexer\")"
---
/// Lexes UTF-8 text into an eagerly filled token stream without constructing
/// a parser.
///
/// The stream retains every emitted token, including EOF and tokens on hidden
/// or custom channels. Lexer rules using `skip` do not emit tokens.
///
/// To print ANTLR-style records containing token text, type, and channel:
/// `for token in lex(src, TLexer::new).tokens() { println!("{token}"); }`
pub fn lex<L: antlr4_runtime::TokenSource>(
    input: impl AsRef<str>,
    lexer: impl FnOnce(antlr4_runtime::InputStream) -> L,
) -> antlr4_runtime::CommonTokenStream<L> {
    lex_stream(antlr4_runtime::InputStream::new(input.as_ref()), lexer)
}

/// Lexes a caller-provided character stream without constructing a parser.
///
/// Unlike [`lex`], this accepts any [`antlr4_runtime::CharStream`], including a
/// named [`antlr4_runtime::InputStream`] or a byte-oriented
/// [`antlr4_runtime::ByteStream`].
pub fn lex_stream<I: antlr4_runtime::CharStream, L: antlr4_runtime::TokenSource>(
    input: I,
    lexer: impl FnOnce(I) -> L,
) -> antlr4_runtime::CommonTokenStream<L> {
    antlr4_runtime::CommonTokenStream::new(lexer(input))
}
